--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -21,6 +22,7 @@
     "buffer": "^6.0.3",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
+    "expo-clipboard": "^7.1.4",
     "expo-constants": "~17.1.5",
     "expo-env": "^1.1.1",
     "expo-font": "~13.3.1",
